<resources>
    <string name="app_name">Trempi</string>
    <string name="name">Event Name</string>
    <string name="number">+972</string>
    <string name="ok">OK</string>
    <string name="title">Login</string>
    <string name="hello">Hello</string>
    <string name="create_event">Create an Event</string>
    <string name="open_event">Open an Event</string>
    <string name="title_create_event">Create an Event</string>
    <string name="date_of_event">Date</string>
    <string name="time_of_event">Time</string>
    <string name="address_of_event">Address</string>
    <string name="recycler">repitable event</string>
    <string name="invite_contacts">Invite Contacts</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="choose_contacts">Chose Contact to Invite</string>
    <string name="start_position">Start Location</string>
    <string name="dest_position">Destination</string>
    <string name="number_of_empty_places">Empty Places</string>
    <string name="take_a_place">Take a Place</string>
    <string name="how_many">How Many</string>
    <string name="add_a_car">Add a Car</string>
    <string name="login">Login</string>
    <string name="start_time">Time</string>
    <string name="tremp_details">Tremp Details</string>
    <string name="fillAllFiled">all fields must be filled</string>
    <string name="titleAllFiled">hii</string>
    <string name="USER_DETAILS">USERS_DETAILS</string>
    <string name="USER_NAME">USER_NAME</string>
    <string name="USER_NUMBER">USER_NUMBER</string>
    <string name="TREMPS_DB">TREMPS_DB</string>
    <string name="EVENTS_DB">EVENTS_DB</string>
    <string name="event_name">Event Name</string>
    <string name="chose_tremp">choose a tremp</string>
    <string name="temp_details">tremp details</string>
    <string name="event_not_found">Event not Found</string>
    <string name="recycler_event_not_found">Recycler Event not Found</string>
    <string name="events">EVENTS LIST</string>
    <string name="titleExist">this name already exist</string>
    <string name="tremps_not_found">tremps not found</string>
    <string name="event_name_extra">event_name</string>
    <string name="tremp_name_extra">tremp_name</string>
    <string name="tremp_number_extra">tremp_number_extra</string>
    <string name="tremp_empty_places_extra">tremp_empty_places_extra</string>
    <string name="messageNoPlaces">It\'s too small fot this...</string>
    <string name="tremp_start_position_extra">tremp_start_position_extra</string>
    <string name="exit_place">Exit Address</string>
    <string name="tremp_updated">tremp updated</string>
    <string name="tremp_deleted">tremp deleted</string>
    <string name="tremp_id_extra">tremp_id_extra</string>
    <string name="TREMP_ID">TREMP_ID</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="exit_qustion">Are you sure you want to exit Trempi?</string>
    <string name="exit_title">Hii!</string>
    <string name="about">Lets yous invited share Trempi with each other.</string>
    <string name="about_title">TREMPI</string>
    <string name="share_message">Hey, I have found it a very cool app for sharing event Trempi!"\n"you should download it too!
    https://drive.google.com/drive/folders/1PYse5EVD88ky9lkVtklHB4RrijPm5Yv8?usp=sharing</string>
    <string name="send">SEND</string>
    <string name="no_contacts">no contacts on yor phone</string>
    <string name="problem_to_get_contacts">problem_to_gety_contacts</string>
    <string name="search">SEARCH</string>
    <string name="search_by_name">search by name</string>
    <string name="messageNotExist">there is no contacts with this name</string>
    <string name="sms_sent">sms sent to the chosen contacts</string>
    <string name="messageEventName">you must fill event name filed</string>
    <string name="no_selection">no contact selected</string>
    <string name="permission_request">permission request denied</string>
    <string name="contacts">CONTACTS</string>
    <string name="tremps">TREMPI to</string>
    <string name="new_tremp">NEW TREMP</string>
    <string name="messageNotExistAtAll">there is no contacts in yor device</string>
    <string name="tremp_was_insert">tremp was insert!</string>
    <string name="chose_how_may_places" />
    <string name="more_places_message">you must chose at least one place</string>
    <string name="driver_message">want to join your car! his number is: </string>
    <string name="chose_all">select all</string>
    <string name="to">to</string>
    <string name="event">event</string>
    <string name="tremp_event_name_extra">tremp_event_name_extra</string>
    <string name="splash_message">Sharing With Each Other!</string>
    <string name="number_driver">Driver Number</string>
    <string name="exit_time">Exit Time</string>
    <string name="oops">Oops!</string>
    <string name="user_name">Name</string>
    <string name="how_many_empty_places">How many empty places?</string>
    <string name="set_a_place">set places number</string>
    <string name="tremp_exit_time_extra">tremp_exit_time_extra</string>
    <string name="sms_driver">sms sent to the driver</string>
    <string name="events_list">Events List</string>
    <string name="messageEmptyField">You must enter empty places number</string>
    <string name="hii">היי!</string>
    <string name="driver_sms">אני מעוניין להצטרף ל</string>
    <string name="driver_trempi">Trempi</string>
    <string name="driver_to">איתך ל</string>
    <string name="contacts_sms">רצתי להזמין אותך לארוע </string>
    <string name="search_invitation">מוזמן לחפש טרמפ באפליקצית Trempi.</string>


</resources>
