<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TrempActivity"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tremp_details"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txv_car_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/txv_car_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_driver"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/txv_car_exit_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_place"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/txv_car_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/txv_car_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_empty_places"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/txv_car_exit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_time"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"/>
    <Button
        android:id="@+id/btn_set_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_a_place"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:layout_margin="15sp"
        android:visibility="gone"
        />
    <EditText
        android:id="@+id/places_to_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/how_many_empty_places"
        android:inputType="number"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_ok_set_places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:layout_margin="15sp"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/btn_take_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_a_place"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        />
    <EditText
        android:id="@+id/txv_places_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/how_many"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_ok_take_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:visibility="gone" />

</LinearLayout>