<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateEventActivity"
    android:orientation="vertical"
    android:gravity="center|top">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_create_event"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/txv_name_of_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>
    <TextView
        android:id="@+id/txv_date_of_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_of_event"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

    <DatePicker
        android:id="@+id/dtp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/txv_time_of_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_of_event"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <TimePicker
        android:id="@+id/tmp_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/txv_address_of_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_of_event"
        />

    <CheckBox
        android:id="@+id/cmb_is_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_invite_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_contacts"
        android:background="@drawable/button_background"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:textColor="@color/colorWhite"/>
    <Button
        android:id="@+id/btn_ok_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@drawable/button_background"
        android:layout_margin="10dp"
        android:textColor="@color/colorWhite"/>
</LinearLayout>