<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:padding="16dp"
   >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"/>
    <TextView
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimary"/>
    <EditText
        android:id="@+id/txv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/user_name"/>
     <EditText
        android:id="@+id/txv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:inputType="number"
        android:text="@string/number"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok"
        android:background="@drawable/button_background"
        android:layout_margin="10dp"
        android:textColor="@color/colorWhite"
        />
  </LinearLayout>