<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddContactActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_contacts"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/txv_name_to_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_by_name"/>

        <Button
            android:id="@+id/btn_search_contact"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/search"
            android:layout_margin="5dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_background"/>

    </LinearLayout>
    <CheckBox
        android:id="@+id/ckb_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_all"
        android:textSize="15sp"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/contacts_list_view_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton

        android:id="@+id/btn_send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_send_black_24dp" />
</LinearLayout>