<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="16dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/txt_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_create_event"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:text="@string/create_event"
            android:textSize="18sp"
            android:layout_margin="15dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            />

        <Button
            android:id="@+id/btn_open_event"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:text="@string/open_event"
            android:textSize="18sp"
            android:layout_margin="15dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"/>

</LinearLayout>