<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OpenEventActivity"
    android:orientation="vertical"
    android:padding="16dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/events_list"
    android:layout_gravity="center"
    android:textSize="30sp"
    android:textColor="@color/colorPrimary"
    android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txv_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_event_name"
            android:paddingEnd="5dp"/>
        <Button
            android:id="@+id/btn_search_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:paddingStart="5dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/ltv_events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>